--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.2",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
