Enhance Profile, AddWallet, EditProfile, and NewTransaction screens; integrate image picker and date picker functionalities, and improve UI components

--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "firebase": "^11.9.1",
     "react": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-date-picker": "^5.0.13",
     "react-native-gifted-charts": "^1.4.61",
-    "react-native-svg": "15.11.2"
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-svg": "15.11.2",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
