--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-gifted-charts": "^1.4.61",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-svg": "15.11.2",
-    "expo-image-picker": "~16.1.4"
+    "expo-image-picker": "~16.1.4",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
