--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
-    "expo": "^54.0.13",
+    "expo": "~54.0.25",
     "expo-dotenv": "^0.1.0",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "firebase": "^11.9.1",
     "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-date-picker": "^5.0.13",
     "react-native-gifted-charts": "^1.4.61",
     "react-native-modal-datetime-picker": "^18.0.0",
