--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~54.0.25",
+    "expo-dev-client": "~6.0.20",
     "expo-dotenv": "^0.1.0",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
